--- a/app/spa-loading-template.html
+++ b/app/spa-loading-template.html
@@ -1,48 +1,6 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Loading...</title>
-    <style>
-      .loader {
-        display: block;
-        position: fixed;
-        z-index: 1031;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 18px;
-        height: 18px;
-        box-sizing: border-box;
-        border: solid 2px transparent;
-        border-top-color: #000;
-        border-left-color: #000;
-        border-bottom-color: #efefef;
-        border-right-color: #efefef;
-        border-radius: 50%;
-        -webkit-animation: loader 400ms linear infinite;
-        animation: loader 400ms linear infinite;
-      }
-
-      @-webkit-keyframes loader {
-        0% {
-          -webkit-transform: rotate(0deg);
-        }
-        100% {
-          -webkit-transform: rotate(360deg);
-        }
-      }
-      @keyframes loader {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="loader"></div>
-  </body>
-</html>
+<div class="fixed min-h-screen w-full inset-0 flex items-center justify-center bg-dark-night z-50">
+  <div class="flex flex-col items-center justify-center gap-3">
+    <div class="w-10 h-10 border-4 border-gray-500 border-t-primary rounded-full animate-spin"></div>
+    <p class="text-gray-200 font-sans font-normal">Loading Jonopath<span class="redirect">...</span></p>
+  </div>
+</div>
