ColorMode Saved On Local Storage

--- a/app/spa-loading-template.html
+++ b/app/spa-loading-template.html
@@ -1,6 +1,13 @@
-<div class="fixed min-h-screen w-full inset-0 flex items-center justify-center bg-dark-night z-50">
+<div
+  class="fixed min-h-screen w-full inset-0 flex items-center justify-center bg-dark-knight z-50"
+>
   <div class="flex flex-col items-center justify-center gap-3">
-    <div class="w-10 h-10 border-4 border-gray-500 border-t-primary rounded-full animate-spin"></div>
-    <p class="text-gray-200 font-sans font-normal">Loading Jonopath<span class="redirect">...</span></p>
+    <div
+      class="w-10 h-10 border-4 border-gray-500 border-t-primary rounded-full animate-spin"
+    ></div>
+    <p class="text-gray-200 font-sans font-normal">
+      Loading Jonopath
+      <span class="redirect">...</span>
+    </p>
   </div>
 </div>
